crates/toner-tlb-macros/tests/compile-fail/bit_unpack_parse_as.stderr
error: `parse_as` cannot be used with derive(BitUnpack); use `unpack_as` instead
 --> tests/compile-fail/bit_unpack_parse_as.rs:5:5
  |
5 |     #[tlb(parse_as = "u8")]
  |     ^
